syntax = "proto3";

option java_multiple_files = true;

package com.elca.vn.model;
option java_outer_classname = "ProjectProto";
option objc_class_prefix = "RTG";

import "google/protobuf/timestamp.proto";

message PimProject {
  int32 projectNumber = 2;
  string projectName = 3;
  string customer = 4;
  int64 groupID = 5;
  repeated int64 memberVISAs = 6;
  Status status = 7;
  google.protobuf.Timestamp startDate = 8;
  google.protobuf.Timestamp endDate = 9;
  ProcessingStatus processingStatus = 10;
}

enum ProcessingStatus {
  INSERT = 0;
  UPDATE = 1;
  DELETE = 2;
}

enum Status {
  NEW = 0;
  PLA = 1;
  INO = 2;
  FIN = 3;
}